--- a/src/pages/NoPage/styles.css
+++ b/src/pages/NoPage/styles.css
@@ -2,8 +2,8 @@
     width: 22rem;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 25px;
+    margin-top: 5rem;
     border: 0px;
     color:royalblue;
-    background: linear-gradient(to bottom right, lightgoldenrodyellow, transparent)
+    background: linear-gradient(to bottom left, whitesmoke,lavender)
 }
