--- a/src/components/IngreForm/styles.css
+++ b/src/components/IngreForm/styles.css
@@ -2,6 +2,7 @@
     background-color: transparent;
     border: 1px solid midnightblue;
     color: midnightblue;
+    margin-bottom: .5rem;
 }
 
 .ingreFormControl::placeholder{
@@ -12,8 +13,8 @@
     font-weight: bold;
     text-align: center;
     color:black;
-    margin-bottom: 3px;
-    margin-top: 3px;
+    margin-bottom: .5rem;
+    margin-top: .5rem;
 }
 
 .ingreFormListGroup{
@@ -25,5 +26,5 @@
     width: 100%;
     background: linear-gradient(to bottom right,royalblue, midnightblue, cornflowerblue);
     border: 0px;
-    color:lightgoldenrodyellow;
+    color:whitesmoke;
 }
