--- a/src/components/RecipeViewCard/styles.css
+++ b/src/components/RecipeViewCard/styles.css
@@ -1,23 +1,21 @@
 .RecipeViewCard {
     width: 21rem;
+    height: 30rem;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 15px;
+    margin-top: 2rem;
     border: 0px;
-    /* border: 1px solid lightgoldenrodyellow; */
-    /* background: linear-gradient(to top left, transparent, lightgoldenrodyellow) */
-      background: linear-gradient(to bottom right,goldenrod, lightgoldenrodyellow)
+    background: linear-gradient(powderblue, lavender)
 }
 
 .viewRecipeLink, .viewRecipeLink:link, .viewRecipeLink:hover, .viewRecipeLink:active, .viewRecipeLink:focus, .viewRecipeLink:visited{
     color:midnightblue;
     text-decoration: none;
     margin:0 auto;
-    margin-bottom: 10px;
+    margin-bottom: 1rem;
 }
 
 .recipeViewCardImage {
     width: 100%;
     height: 300px;
-    
 }
