--- a/src/pages/HomePage/styles.css
+++ b/src/pages/HomePage/styles.css
@@ -22,7 +22,8 @@ input[type="search"]::-webkit-search-cancel-button {
 
 h1 {
     text-align: center;
-    color: midnightblue;
+    color: black;
+	font-weight: bold;
 }
 
 body {
