--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -1,5 +1,4 @@
 .footer {
-    background: linear-gradient(lavender,peachpuff);
-    margin-top: 2rem;
-    
+    font-size: 25px;
+    width: 1rem;
 }
