--- a/src/components/NoPageCard/styles.css
+++ b/src/components/NoPageCard/styles.css
@@ -8,7 +8,7 @@
     background: linear-gradient(to bottom left, whitesmoke,lavender)
 }
 
-.addRecipeBtn, .addRecipeBtn:link, .addRecipeBtn:hover, .addRecipeBtn:active, .addRecipeBtn:focus, .addRecipeBtn:visited {
+.addRecipeBtn {
     width: 60%;
     margin-top: 1rem;
     border-radius:15px;
@@ -18,7 +18,7 @@
 }
 
 @media screen and (max-width: 420px){
-    .addRecipeBtn, .addRecipeBtn:link, .addRecipeBtn:hover, .addRecipeBtn:active, .addRecipeBtn:focus, .addRecipeBtn:visited {
+    .addRecipeBtn {
         width: 60%;
     }
 
